fix: nicer borders rounding for scrollbar

--- a/demo/src/layouts/Default/content-navigation.scss
+++ b/demo/src/layouts/Default/content-navigation.scss
@@ -33,7 +33,7 @@
   }
 
   &::after {
-    border-radius: 1rem;
+    border-radius: 0.55rem 1rem 1rem 0.55rem;
     transition: opacity 0.3s;
     position: absolute;
     content: "";
@@ -65,7 +65,7 @@
 
   & .links-tree {
     padding: 1.5rem 0 4rem 0rem;
-    border-radius: 1rem;
+    border-radius: 0.55rem 1rem 1rem 0.55rem;
     flex-basis: 33rem;
     min-width: 22rem;
     max-width: 32rem;
